@@ -17,6 +17,9 @@ ChangeLog.
 STABLE RELEASE 1.1.0 : Minor features enhancement
 
 # Restore "cone" RelayType to improve support for some (broken) NATs.
+# Add 12 bits of randomness to Teredo client address:
+  This makes Teredo addresses less predictible for supposedly enhanced
+  host security.
 # Minor specification conformance fixes to miredo-server.
 # Use a hook shell script for client interface configuration.
 # Remove (Linux-only) buggy and power-saving unfriendly "autoclient" mode.
